# Mocca.jl

./: .gitignore  Project.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: make.jl
docs/src/: index.md  installation.md  quick_start.md
examples/: history_matching.jl  optimization.jl  quick_start.jl  simulate_DCB.jl  simulate_cyclic.jl
models/: models.jl
models/json/: haghpanah_DCB_input.json  haghpanah_DCB_input_simple.json  haghpanah_cyclic_input.json  haghpanah_cyclic_input_simple.json  mocca_adsorption_schema.json
models/julia/: model_library.jl
models/yaml/: haghpanah_constants.yml
python/: README_python.md
python/examples/: quick_start.py
python/mocca/: __init__.py  constants.py  forces.py  input_output.py  model.py  physics.py  plotting.py  simulator.py  systems.py
python/tests/: test_smoke.py
src/: Mocca.jl  plot.jl  utils.jl
src/init/: constants.jl  init_adsorption_column.jl
src/input_output/: export_cell_results.jl  input_output.jl  parse_input.jl  setup_mocca_case.jl
test/: data_input.jl  jutul_integration.jl  runtests.jl  state_initialization.jl
test/regression/: cyclic_regression.jl  dcb_regression.jl
